--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
 	"version": "1.0.0",
 	"description": "The repository was created for educational purposes, especially for the Node.js Global Mentoring Program [2024 Q1-Q2 GUKKA, BY] in the Learn Digital Platform of EPAM Systems. The main goal of the project is to complete the practical tasks of the program.",
 	"main": "./src/index.js",
+	"scripts": {
+		"start": "node ./dist/index.js",
+		"build": "tsc"
+	},
+	"devDependencies": {
+		"tslog": "^4.9.2",
+		"prettier": "^3.1.1",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.3.3"
+	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/artykovdaniyar/node.js-mentoring-program.git"
@@ -15,5 +25,8 @@
 	"bugs": {
 		"url": "https://github.com/artykovdaniyar/node.js-mentoring-program/issues"
 	},
-	"homepage": "https://github.com/artykovdaniyar/node.js-mentoring-program#readme"
+	"homepage": "https://github.com/artykovdaniyar/node.js-mentoring-program#readme",
+	"dependencies": {
+		"nodemon": "^3.1.0"
+	}
 }
