--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
 	"main": "./src/index.js",
 	"scripts": {
 		"start": "node ./dist/index.js",
+		"lint": "eslint ./src/**",
+		"lint:fix": "eslint ./src/** --fix",
 		"build": "tsc"
 	},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^6.16.0",
+		"@typescript-eslint/parser": "^6.16.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.2",
 		"tslog": "^4.9.2",
 		"prettier": "^3.1.1",
 		"ts-node": "^10.9.2",
