--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"strictPropertyInitialization": false,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"noImplicitAny": false
 	},
 	"include": ["src"],
 	"exclude": ["node_modules"]
