--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
 		"plugin:prettier/recommended",
 	],
 	"rules": {
-		"no-console": ["error", { "allow": ["warn", "error", "info"] }],
+		"no-console": ["warn"],
 		"@typescript-eslint/ban-types": "off",
 		"@typescript-eslint/no-unused-vars": ["off"],
 		"@typescript-eslint/no-explicit-any": "off",
