--- a/.eslintrc
+++ b/.eslintrc
@@ -7,9 +7,9 @@
 		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:prettier/recommended",
+		"webpack.config.js",
 	],
 	"rules": {
-		"no-console": ["warn"],
 		"@typescript-eslint/ban-types": "off",
 		"@typescript-eslint/no-unused-vars": ["off"],
 		"@typescript-eslint/no-explicit-any": "off",
