--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"start": "node ./dist/index.js",
 		"lint": "eslint ./src/**",
 		"lint:fix": "eslint ./src/** --fix",
-		"build": "tsc"
+		"build": "tsc",
+		"task1": "npm run build && node ./dist/customEventEmitter.test.js"
 	},
 	"devDependencies": {
+		"nodemon": "^3.1.0",
 		"@typescript-eslint/eslint-plugin": "^6.16.0",
 		"@typescript-eslint/parser": "^6.16.0",
 		"eslint": "^8.56.0",
@@ -33,8 +35,5 @@
 	"bugs": {
 		"url": "https://github.com/artykovdaniyar/node.js-mentoring-program/issues"
 	},
-	"homepage": "https://github.com/artykovdaniyar/node.js-mentoring-program#readme",
-	"dependencies": {
-		"nodemon": "^3.1.0"
-	}
+	"homepage": "https://github.com/artykovdaniyar/node.js-mentoring-program#readme"
 }
