Implementation EventEmitter With Timing

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"lint": "eslint ./src/**",
 		"lint:fix": "eslint ./src/** --fix",
 		"build": "tsc",
-		"task1": "npm run build && node ./dist/customEventEmitter.test.js"
+		"task1": "npm run build && node ./dist/customEventEmitter.test.js",
+		"task2": "npm run build && node ./dist/WithTime.js"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.0",
