--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
 		"lint:fix": "eslint ./src/** --fix",
 		"build": "tsc",
 		"task1": "npm run build && node ./dist/customEventEmitter.test.js",
-		"task2": "npm run build && node ./dist/WithTime.js"
+		"task2": "npm run build && node ./dist/WithTime.js",
+		"task3": "node copyCsvFileToDist.js && npm run build && node ./dist/csvtojson.js"
+	},
+	"dependencies": {
+		"csvtojson": "^2.0.10"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.0",
