--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
 		"start": "node ./dist/index.js",
 		"lint": "eslint ./src/**",
 		"lint:fix": "eslint ./src/** --fix",
-		"build": "tsc"
+		"build": "tsc",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:unit": "jest  --testMatch='**/*.unit.test.ts'",
+		"test:integration": "jest  --testMatch='**/*.integration.test.ts'",
+		"test:coverage": "jest src --coverage",
+		"test:e2e": "jest e2e"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^6.16.0",
@@ -16,9 +22,9 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.2",
-		"tslog": "^4.9.2",
 		"prettier": "^3.1.1",
 		"ts-node": "^10.9.2",
+		"tslog": "^4.9.2",
 		"typescript": "^5.3.3"
 	},
 	"repository": {
@@ -35,6 +41,12 @@
 	},
 	"homepage": "https://github.com/artykovdaniyar/node.js-mentoring-program#readme",
 	"dependencies": {
-		"nodemon": "^3.1.0"
+		"@types/jest": "^29.5.12",
+		"axios": "^1.6.8",
+		"jest": "^29.7.0",
+		"node-notifier": "^10.0.1",
+		"nodemon": "^3.1.0",
+		"supertest": "^6.3.4",
+		"ts-jest": "^29.1.2"
 	}
 }
