--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "The repository was created for educational purposes, especially for the Node.js Global Mentoring Program [2024 Q1-Q2 GUKKA, BY] in the Learn Digital Platform of EPAM Systems. The main goal of the project is to complete the practical tasks of the program.",
 	"main": "./src/index.js",
 	"scripts": {
+		"start": "npm run build && pm2 start dist/index.js --name ngmp-network-app",
+		"stop": "pm2 stop ngmp-network-app && pm2 delete ngmp-network-app",
 		"dev": "nodemon",
-		"start": "node ./dist/index.js",
 		"lint": "eslint ./src/**",
 		"lint:fix": "eslint ./src/** --fix",
 		"build": "tsc"
@@ -16,10 +17,11 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.2",
-		"tslog": "^4.9.2",
 		"prettier": "^3.1.1",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.3.3"
+		"tslog": "^4.9.2",
+		"typescript": "^5.3.3",
+		"pm2": "^5.3.1"
 	},
 	"repository": {
 		"type": "git",
@@ -35,6 +37,7 @@
 	},
 	"homepage": "https://github.com/artykovdaniyar/node.js-mentoring-program#readme",
 	"dependencies": {
-		"nodemon": "^3.1.0"
+		"nodemon": "^3.1.0",
+		"uuid": "^9.0.1"
 	}
 }
