--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"build": "tsc"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.21",
 		"@typescript-eslint/eslint-plugin": "^6.16.0",
 		"@typescript-eslint/parser": "^6.16.0",
 		"eslint": "^8.56.0",
@@ -35,6 +36,7 @@
 	},
 	"homepage": "https://github.com/artykovdaniyar/node.js-mentoring-program#readme",
 	"dependencies": {
-		"nodemon": "^3.1.0"
+		"nodemon": "^3.1.0",
+		"express": "^4.19.2"
 	}
 }
