--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.2",
-		"tslog": "^4.9.2",
 		"prettier": "^3.1.1",
 		"ts-node": "^10.9.2",
+		"tslog": "^4.9.2",
 		"typescript": "^5.3.3"
 	},
 	"repository": {
@@ -36,7 +36,8 @@
 	},
 	"homepage": "https://github.com/artykovdaniyar/node.js-mentoring-program#readme",
 	"dependencies": {
+		"express": "^4.19.2",
 		"nodemon": "^3.1.0",
-		"express": "^4.19.2"
+		"uuid": "^9.0.1"
 	}
 }
