--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"homepage": "https://github.com/artykovdaniyar/node.js-mentoring-program#readme",
 	"dependencies": {
+		"body-parser": "^1.20.2",
 		"express": "^4.19.2",
 		"nodemon": "^3.1.0",
 		"uuid": "^9.0.1"
