--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"dependencies": {
 		"body-parser": "^1.20.2",
 		"express": "^4.19.2",
+		"joi": "^17.12.3",
 		"nodemon": "^3.1.0",
 		"uuid": "^9.0.1"
 	}
