--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
+		"@types/mongoose": "^5.11.97",
 		"@typescript-eslint/eslint-plugin": "^6.16.0",
 		"@typescript-eslint/parser": "^6.16.0",
 		"eslint": "^8.56.0",
@@ -41,6 +42,7 @@
 		"body-parser": "^1.20.2",
 		"express": "^4.19.2",
 		"joi": "^17.12.3",
+		"mongoose": "^8.3.3",
 		"nodemon": "^3.1.0",
 		"uuid": "^9.0.1"
 	}
